Estimateur pour impact non conditionné et variance associée

--- a/src/analyse_descriptive.qmd
+++ b/src/analyse_descriptive.qmd
@@ -39,9 +39,9 @@ colnames(summVarsExp) <- c("Control", "Treated", "E")
 summVarsExp <- round(summVarsExp, 4L)
 summVarsExp
 
-conversion_latex(summVarsExp, 
-                 nom = "data_vars_exp", 
-                 caption = "Moyenne des variables explicatives")
+# conversion_latex(summVarsExp, 
+#                  nom = "data_vars_exp", 
+#                  caption = "Moyenne des variables explicatives")
 ```
 ```{r}
 dataObs %>% 
